fix z-index issue by not elevating top-bar and hero but instead put negative z-index on article-nav-sidebar

--- a/frontend/style/components/_components.article-nav.scss
+++ b/frontend/style/components/_components.article-nav.scss
@@ -117,7 +117,7 @@
 }
 
 .c-article-nav-sidebar {
-  z-index: 1;
+  z-index: -1;
   padding: 0 $spacing;
   position: fixed;
   display: block;
@@ -133,4 +133,3 @@
     display: none;
   }
 }
-
