--- a/frontend/style/utilities/_utilities.bg.scss
+++ b/frontend/style/utilities/_utilities.bg.scss
@@ -7,3 +7,7 @@
   background: $brand-dark;
   padding: $spacing-large 0;
 }
+
+.u-bg-white {
+  background-color: $white;
+}
